--- a/src/app/HiringManagement/hiring-dashboard/hiring-dashboard.component.html
+++ b/src/app/HiringManagement/hiring-dashboard/hiring-dashboard.component.html
@@ -470,9 +470,9 @@
                                                     <ng-container *ngIf="cdata.STATUS == 3 || cdata.STATUS == 4 || cdata.STATUS == 6">
                                                         <span class="badge badge-height bg-warning-subtle text-warning  width-budge fs-11 fw-semibold text-uppercase">{{cdata.STATUS_VAL}}</span>
                                                     </ng-container>
-                                                    <ng-container  *ngIf="cdata.STATUS == 7">
+                                                    <!-- <ng-container  *ngIf="cdata.STATUS == 7">
                                                         <span class="badge badge-height bg-danger-subtle text-danger  width-budge fs-11 fw-semibold text-uppercase">{{cdata.STATUS_VAL}}</span>
-                                                    </ng-container>
+                                                    </ng-container> -->
                                                 </td>
                                                 <td>
                                                     <ul class="list-inline hstack mb-0" [hidden]="cdata.STATUS == 1 || cdata.STATUS == 6">
