--- a/src/app/PerformanceManagement/performance-management/performance-management.component.html
+++ b/src/app/PerformanceManagement/performance-management/performance-management.component.html
@@ -26,7 +26,7 @@
                                                         <div class="flex-shrink-0">
                                                             <div class="avatar-sm">
                                                                 <span class="avatar-title bg-info-subtle ms-1 ma-10">
-                                                                    <img src="assets\styles\img\icons8-performance-64.png" alt="" width="100%">
+                                                                    <img src="assets\styles\img\performance01.png" alt="" width="100%">
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -197,7 +197,7 @@
                                                   <td [attr.rowspan]="EmpGoalList.length" class="align-middle">
                                                     <ul class="list-inline hstack gap-1 mb-0">
                                                       <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="View Details">
-                                                        <a href="#GoalUpdationModal" data-bs-toggle="modal" class="d-inline-block">
+                                                        <a [routerLink]="['/Goalprogress_tracker']" [queryParams]="{ empcode:goallist.EMP_CODE,reqId:goallist.REQUEST_ID,flag:1 }" data-bs-toggle="modal" class="d-inline-block">
                                                           <i class="ri-eye-fill fs-20 text-blue text-center"></i>
                                                         </a>
                                                       </li>
@@ -300,12 +300,12 @@
                                                             </a>
                                                         </li>
                                                         <li *ngIf="dataLM.REQUEST_STATUS == 3 || dataLM.REQUEST_STATUS == 7 || dataLM.REQUEST_STATUS == 9 || dataLM.REQUEST_STATUS == 5"  class="list-inline-item" title="Check Goal Status">
-                                                            <a href="#" class="text-blue d-inline-block edit-item-btn">
+                                                            <a [routerLink]="['/Goalprogress_tracker']" [queryParams]="{ empcode:dataLM.EMP_CODE,reqId:dataLM.REQUEST_ID,flag:2 }" class="text-blue d-inline-block edit-item-btn">
                                                                 <i class="ri-edit-box-fill fs-18"></i>
                                                             </a>
                                                         </li>
                                                         <li *ngIf="dataLM.REQUEST_STATUS == 6 || dataLM.REQUEST_STATUS == 8" class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Submit Assessment">
-                                                            <a class="text-success d-inline-block" href="appraisalForm.html">
+                                                            <a class="text-success d-inline-block" [routerLink]="['/Goalprogress_tracker']" [queryParams]="{ empcode:dataLM.EMP_CODE,reqId:dataLM.REQUEST_ID,flag:2 }">
                                                                 <i class="ri-todo-fill fs-18"></i>
                                                             </a>
                                                         </li>
