--- a/src/app/LMS/course-feedback-form/course-feedback-form.component.html
+++ b/src/app/LMS/course-feedback-form/course-feedback-form.component.html
@@ -63,7 +63,7 @@
                                 <!--End Training Info-->
 
                                 
-                                <form autocomplete="off" [formGroup]="requestForm" (ngSubmit)="validateForm()">
+                                <form autocomplete="off" [formGroup]="requestForm" (ngSubmit)="validateForm()" [ngClass]="{'disabled': isDisabled}">
                                 <div class="row align-items-end">
                                         <div class="col-lg-12 col-md-12">
                                             <div class="p-2">
@@ -247,7 +247,7 @@
                                     </div> <!-- end card-body-->
                                     <div class="col-lg-12">
                                         <div class="d-flex align-items-center flex-wrap gap-2">
-                                            <div class="flex-grow-1 text-center">
+                                            <div class="flex-grow-1 text-center" *ngIf="viewflag == 1">
                                                 <div  *ngIf="!requestForm.valid">
                                                     <button type="submit" class="btn btn-orange btn-label right ms-auto nexttab nexttab font-type" [disabled]="requestForm.valid" id="validate-btn"><i class="ri-check-double-line label-icon align-middle fs-16 ms-2"></i>Submit</button>
                                                     <button type="button" class="btn btn-blue btn-label right nexttab nexttab font-type" (click)="Clear()"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Cancel</button>
